Fri Apr 10 10:26:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-openvms.h
          OpenVMS lacks setenv/unsetenv

Fri Apr 10 03:32:04 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/OS_NS_stdlib.inl:

          Fix typo from previous commit.

Fri Apr 10 03:00:44 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/OS_NS_stdlib.inl:
        * ace/config-qnx-rtp-common.h:

          The newly added [un]setenv wrappers don't compile on qnx rtp
          because that platform defines unsetenv as having a void
          return. It is possible that other platforms have this as well,
          as legacy linux man pages show that signature.

Thu Apr  9 12:34:41 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * ace/OS_NS_stdio.inl:
          Reverted renaming of ACE_HAS_NONCONST_WFDOPEN define

Thu Apr  9 11:45:08 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * ace/OS_NS_stdio.inl:
          Resolved compiler error on WinCE 5 VC 8.

Wed Apr  8 10:59:59 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * ace/config-win32-cegcc.h:
          Added to support CE gcc compiler

        * ace/config-win32-common.h:
          Prevent ACE_HAS_CUSTOM_EXPORT_MACROS from
          being defined a second time.

        * ace/config-win32.h:
          Introduced ACE_HAS_CEGCC. When defined,
          config-win32-cegcc is included.

        * ace/Numeric_Limits.h:
          "#ifdef" replace by "#if defined"

        * ace/os_include/sys/os_stat.h:
          Prevent defines from being defined a second time.

        * ace/OS_NS_stdio.inl:
          Prevent compiler errors when compiling
          with CE gcc compiler.

          Using global namespace for fseek

        * ace/OS_NS_stdlib.inl:
          Prevent compiler errors when compiling
          with CE gcc compiler.

        * ace/OS_NS_Thread.h:
          Defining STACK_SIZE_PARAM_IS_A_RESERVATION (when it
          isn't defined yet).

        * ace/OS_NS_time.h: